--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </section>
     <br />
     <div id="container" class="container">
-      <div class="flex-num">1</div>
-      <div class="flex-num">2</div>
-      <div class="flex-num">3</div>
-      <div class="flex-num">4</div>
+      <div class="flex-num"><span>1</span></div>
+      <div class="flex-num"><span>2</span></div>
+      <div class="flex-num"><span>3</span></div>
+      <div class="flex-num"><span>4</span></div>
     </div>
   </body>
 </html>
